프로젝트 수정